# swagger_output.json
@@ -2326,6 +2326,19 @@
           }
         }
       }
+    },
+    "/api/dashboard/stats": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
